<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:layout_centerHorizontal="true" ads:adSize="SMART_BANNER" ads:adUnitId="@string/banner_ad_unit_id" xmlns:ads="http://schemas.android.com/apk/res-auto" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:layout_weight="1.0">
        <ScrollView android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:id="@id/whitelist_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_whitelist_text" />
        </ScrollView>
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="2.0dip" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textSize="13.0sp" android:layout_gravity="center" android:id="@id/left_whitelist_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/left_whitelist_button" android:freezesText="false" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textSize="13.0sp" android:layout_gravity="center" android:id="@id/middle_whitelist_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/middle_whitelist_button" android:freezesText="false" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textSize="13.0sp" android:layout_gravity="center" android:id="@id/right_whitelist_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/right_whitelist_button" android:freezesText="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>