<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adSize="SMART_BANNER" ads:adUnitId="@string/banner_ad_unit_id" xmlns:ads="http://schemas.android.com/apk/res-auto" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/mainFrame" android:background="@drawable/borderwithnocolor" android:padding="3.0dip" android:scrollbars="vertical" android:fadingEdge="horizontal|vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="2.0dip">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/mainInnerFrame" android:padding="3.0dip" android:scrollbars="vertical" android:fadingEdge="horizontal|vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="2.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/mainTextView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ffff0000" android:layout_gravity="center" android:id="@id/singleLineTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:text="" />
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/main_activity_icon" android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/wiretapdisabled" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="2.0dip" android:baselineAligned="false">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Button android:textSize="13.0sp" android:layout_gravity="center" android:id="@id/left_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/button_enable" android:freezesText="false" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Button android:textSize="13.0sp" android:layout_gravity="center" android:id="@id/middle_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/button_whitelist" android:freezesText="false" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Button android:textSize="13.0sp" android:layout_gravity="center" android:id="@id/right_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/button_settings" android:freezesText="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>